--- a/content/article/1.rust_os.md
+++ b/content/article/1.rust_os.md
@@ -2,7 +2,7 @@
 title: "基于 Rust 语言的多任务操作系统"
 description: "自主实现了一个基于 Rust 语言的多任务操作系统"
 date: 2023-08-19T00:00
-header-image: "https://blogsources-1305284863.file.myqcloud.com/images/IMG_9924.PNG"
+headerImage: "https://blogsources-1305284863.file.myqcloud.com/images/IMG_9924.PNG"
 ---
 
 # 基于Rust语言的多任务操作系统的设计与实现
