dev: 文章页初步

--- a/content/article/2.hundsun.md
+++ b/content/article/2.hundsun.md
@@ -2,7 +2,7 @@
 title: "恒生夏令营"
 description: "参与了“基金柜台销售系统”项目，获得了优秀个人奖"
 date: 2023-08-02T00:00
-header-image: "https://blogsources-1305284863.file.myqcloud.com/images/IMG_8020.JPG"
+headerImage: "https://blogsources-1305284863.file.myqcloud.com/images/IMG_8020.JPG"
 ---
 
 # 恒生夏令营
